@@ -2,6 +2,7 @@ ChangeLog for the Astro project.
 
 20201227:
 	* fix a debug message in Outline.cpp that caused a crash
+	* add blacklist mechanism to modules
 
 20201226:
 	* many portability fixes to get rid of compiler warnings
